Fixed overlapping mobile slider

--- a/src/components/Loading/Loading.scss
+++ b/src/components/Loading/Loading.scss
@@ -4,8 +4,7 @@
 
 .loading-text {
 	width: 100%;
-	height: 100px;
-	line-height: 100px;
+	line-height: 40px;
   font-family:'Space Grotesk', sans-serif;
 	span {
 		display: inline-block;
